[package]
name = "model"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
sea-query = { version = "0.30.0", features = ["derive"] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.1", features = ["json", "chrono", "postgres"] }
utoipa = "3.4.4"
validator = { version = "0.16.1", features = ["derive"] }
